# medimage-eval

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  STATUS.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EVAL_PROTOCOL.md  LICENSE_MAP.md
src/medimage_eval/: __init__.py  cli.py
src/medimage_eval/adjudication/: __init__.py
src/medimage_eval/benchmarks/: __init__.py
src/medimage_eval/judges/: __init__.py  anthropic_judge.py  base.py  clinical_prompts.py  decision.py  dual_judge.py  openai_judge.py  preflight.py
src/medimage_eval/receipts/: __init__.py
src/medimage_eval/reporting/: __init__.py  manifest_check.py  stats.py
src/medimage_eval/shift_gauntlet/: __init__.py
tests/: test_anthropic_judge.py  test_decision.py  test_dual_judge.py  test_judges_preflight.py  test_openai_judge.py  test_smoke.py
