[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medimage-eval"
version = "0.1.0.dev0"
description = "Audit-grade evaluation substrate for open-source medical imaging models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "GOATnote Autonomous Research Inc." }]
keywords = ["medical-imaging", "evaluation", "clinical-ai", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pydantic>=2.5",
  "click>=8.1",
]

[project.optional-dependencies]
judges = [
  "anthropic>=0.40",
  "openai>=1.50",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "bandit>=1.7",
  "pre-commit>=3.7",
]

[project.scripts]
medimage-eval = "medimage_eval.cli:main"

[project.urls]
Homepage = "https://github.com/GOATnote-Inc/medimage-eval"
Issues = "https://github.com/GOATnote-Inc/medimage-eval/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "E501"]
"src/medimage_eval/judges/clinical_prompts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
  "integration: requires external services (judges, network)",
]
